--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love-Nira</title>
+    <title>Love-SAF</title>
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&family=Rubik+Maze&family=Sofia&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
     <h1>My love is</h1>
-    <marquee behavior="" direction=""><h2>Nujahat Afrin Nira</h2></marquee>
-    <p>Note:Farhan's team working as soon as we are update this website.</p>
+    <marquee behavior="" direction=""><h2>SAF</h2></marquee>
+    <p>Note:F's team working as soon as we are update this website.</p>
     <footer>
-        <p>Desingned by Sagor ahmed</p>
+        <p>Desingned by SAF </p>
     </footer>
 </body>
 </html>
